Crash when "rotate arond selection" is on, and when no object in scene #33522

Closed
opened 2012-12-13 18:52:35 +01:00 by Julien Duroure · 3 comments
Member

%%%Hello,

How to reproduce the seg fault :

  • open blender
  • load factory settings
  • Open user preferences
  • Set "rotate around selection" in "Interface" tab
  • save User preferences, and quit user preferences window
  • click 'X' to delete the default cube that is selected and active by default
  • Try to rotate in 3D View by moving mouse when MMB is pressed --> Crash

With SVN 52979, ubuntu 12.04 64 bits.

%%%

%%%Hello, How to reproduce the seg fault : * open blender * load factory settings * Open user preferences * Set "rotate around selection" in "Interface" tab * save User preferences, and quit user preferences window * click 'X' to delete the default cube that is selected and active by default * Try to rotate in 3D View by moving mouse when MMB is pressed --> Crash With SVN 52979, ubuntu 12.04 64 bits. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev52981. Thanks for the report, closing.%%%

%%%Fixed in svn rev52981. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#33522
No description provided.