Fix #33522: Crash when "rotate arond selection" is on, and when no object in scene

Own regression in recent fix